--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/Pi_Dev_Poker_PlanningDBFinal?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sunset?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
+server.servlet.context-path=/sprr
