--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/Pi_Dev_Poker_PlanningDBFinal?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Hibernate dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
+server.servlet.context-path=/pokerplanning
