--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/sunset?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/neww?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
