--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ application.security.jwt.secret-key=7c1c345adbf37f5fc0e85029800ad41bd9b52fac6fe9
 application.security.jwt.expiration=86400000
 application.security.jwt.refresh-token.expiration=604800000
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kdidifiras30@gmail.com
+spring.mail.password=ubhwkcdqeyfsruhg
+spring.mail.properties..mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
